# autofilm

./: .env.example  .gitignore  CHANGELOG.md  LOG.md  README.md  SETUP.md  bible.py  carryover.py  cost.py  evaluate.py  prepare.py  produce.py  production_bible.py  program.md  pyproject.toml  run_loop.py  test_run  transitions.py  ui_server.py
.claude/skills/: README.md
scripts/: api_smoke_test.py  check_setup.py  loop_e2e_smoke_test.py  preflight_e2e.py  run_loop_smoke_test.py  runway_smoke_test.py  ui_smoke_test.py
the_steel_drivin_man_2/exp_001/: api_events.jsonl  book.txt  cast.json  locations.json  lookbook.json  produce.py  prompts.json  references_manifest.json  run_config.json  script.json  shot_plan.json  storyboard.json
ui/: index.html
