[project]
name = "autofilm"
version = "0.2.0"
description = "Autonomous AI agents producing book-to-film adaptations (Runway-consolidated stack)"
requires-python = ">=3.10"
dependencies = [
    # Core orchestration
    "anthropic>=0.40.0",
    "runwayml>=3.0.0",          # image, video, SFX, TTS — the consolidated stack
    "google-genai>=1.0.0",      # optional: only used for Gemini 3 Pro long-video critic
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "ddgs>=9.0.0",               # actor photo lookup — no API key required (renamed from duckduckgo-search)
    # Book parsing
    "pdfplumber>=0.11.0",
    # Media assembly
    "moviepy>=1.0.3,<2.0.0",   # v2 removed moviepy.editor + renamed core methods
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.4.0",
    # PDF bible generation
    "reportlab>=4.2.0",
    # Quality scoring
    "torch>=2.4.0",
    "open-clip-torch>=2.26.0",
    # GLSL transitions (lazy-imported in transitions.py — only loaded when
    # the storyboard actually uses a GLSL transition like chromatic_glitch
    # or displacement_push). Falls back gracefully via ImportError if a
    # user strips these out.
    "moderngl>=5.12.0",
    "numpy>=1.26.0",
]

[tool.uv]
managed = true
